syntax = "proto3";
package pb;

//import "base.proto";

option go_package = "api/pb";

service StorageSvc {
  rpc UploadFile(stream FileRequest) returns (FileReply) {}
}

message FileRequest {
  oneof data {
    FileInfo info = 1;
    bytes chuck = 2;
  }
}

message FileInfo {
  string file_type = 1;
}

message FileReply {
  string path = 1;
}